# DiRA2020

./: .gitignore  MobilenetUNet_Pytorch.ipynb  README.md  YOLOv4.ipynb
car_control/: CMakeLists.txt  package.xml
car_control/cfg/: CarControl.cfg
car_control/include/car_control/: car_control.h
car_control/src/: car_control_node.cpp  carcontrol.cpp
car_control/src/car_control/: car_control.cpp
cds_msgs/: CMakeLists.txt  package.xml
cds_msgs/msg/: CircleObstacle.msg  Obstacles.msg  PclObstacles.msg  circle_obstacle.msg  control.msg  lane.msg  object.msg  obstacles.msg  segment_obstacle.msg  sign.msg
cds_msgs/params/: carcontrol.yaml  detectobject.yaml  dump.sh  lane_detect.yaml  planning.yaml  sign_detect.yaml
cds_msgs/srv/: GetDrivePoint.srv  IncDecSpeed.srv  IsTurnable.srv  RecoverLane.srv  ResetLane.msg  ResetLane.srv  SetMap.srv
common/: CMakeLists.txt  package.xml
common/cmake/: FindTensorRT.cmake
common/include/common/: libcommon.h  lineparams.h  slidingwindow.h
common/include/trt/: buffers.hpp
common/src/: libcommon.cpp
common/src/common/: libcommon.cpp  lineparams.cpp
control/hw_control/: CMakeLists.txt  package.xml
control/hw_control/include/hw_control/: hw_control.hpp
control/hw_control/src/: hw_control_node.cpp
detectors/lane_detect/: CMakeLists.txt  package.xml
detectors/lane_detect/cfg/: Lane.cfg
detectors/lane_detect/include/: carcontrol.h  lane_detect.h  laneline.h
detectors/lane_detect/include/lane_detect/: lane_detect.h  laneline.h  (+1 more)
detectors/lane_detect/launch/: lane_detect.launch
detectors/lane_detect/src/: lane_detect.cpp  lane_detect_node.cpp  laneline.cpp
detectors/lane_detect/srv/: ResetLane.srv
detectors/lanenet/: CMakeLists.txt  MobilenetUNet_Pytorch.ipynb  README.md  cmd_onnx2trt  package.xml
detectors/lanenet/launch/: lanenet_demo.launch
detectors/lanenet/rviz/: lanenet.rviz
detectors/lanenet/scripts/: run_onnxtrt.py
detectors/lanenet/src/: CMakeLists.txt  lanenet.cpp  lanenet_demo.cpp  logger.cpp
detectors/object_detect/: CMakeLists.txt  package.xml
detectors/object_detect/cfg/: ObjectDetect.cfg
detectors/object_detect/include/: object_detect.h
detectors/object_detect/src/: object_detect.cpp  object_detect_node.cpp
detectors/obstacle_detect/: CMakeLists.txt  package.xml  rviz_plugins.xml
detectors/obstacle_detect/cfg/: obstacle_detect.cfg
detectors/obstacle_detect/launch/: obstacle_cfg.launch
detectors/obstacle_detect/rviz/: obstacle_detect.rviz
detectors/obstacle_detect/src/: CMakeLists.txt  convert_node.cpp  obstacle_detect.cpp  obstacle_detect_node.cpp
detectors/road_shape_detect/: CMakeLists.txt  package.xml
detectors/road_shape_detect/src/: road_shape_detect_node.cpp
detectors/sign_detect/: CMakeLists.txt  YOLOv4.ipynb  package.xml
detectors/sign_detect/cfg/: Sign.cfg
detectors/sign_detect/data/: parameters.yaml  signs.txt
detectors/sign_detect/include/: signdetect.h
detectors/sign_detect/launch/: debug.launch
detectors/sign_detect/scrips/: onnx_add_nms_plugin.py
detectors/sign_detect/src/: CMakeLists.txt  signdetect.cpp  signdetect_node.cpp  yolo_benchmark.cpp  yolov4_tiny.cpp
hardware_control/gear_control/: CMakeLists.txt  README.md  package.xml
hardware_control/gear_control/cfg/: gear_debug.cfg
hardware_control/gear_control/include/: JHPWMPCA9685.h
hardware_control/gear_control/launch/: gear_debug.launch
hardware_control/gear_control/src/: CMakeLists.txt  JHPWMPCA9685.cpp  gear_control.cpp  gear_control_node.cpp  gear_debug.cpp
hardware_control/gpio_control/: CMakeLists.txt  package.xml  setup.py
hardware_control/gpio_control/launch/: gpio_test.launch
hardware_control/gpio_control/scripts/: __init__.py  gpio.py  gpio_control.py  gpio_controller.py  gpio_event.py  gpio_pin_data.py
hardware_control/lcd_ros/: CMakeLists.txt  package.xml
hardware_control/lcd_ros/include/: Hal.h  LCDI2C.h  lcd_ros.h
hardware_control/lcd_ros/launch/: peripheral_controller.launch
hardware_control/lcd_ros/src/: Hal.cpp  LCDI2C.cpp  lcd_ros.cpp
hardware_control/rplidar_ros/: CMakeLists.txt  package.xml
hardware_control/rplidar_ros/launch/: rplidar.launch  view_rplidar.launch
hardware_control/rplidar_ros/rviz/: rplidar.rviz
hardware_control/rplidar_ros/src/: CMakeLists.txt  rplidar_ros.cpp  rplidar_ros_node.cpp
img_pub/: CMakeLists.txt  package.xml
img_pub/src/: img_pub_node.cpp
lane_detect/: CMakeLists.txt  package.xml
lane_detect/cfg/: carcontrol.cfg  detectobject.cfg  lane.cfg  planning.cfg
lane_detect/include/: carcontrol.h  detectlane.h  detectobject.h  detectsign.h  laneline.h  planning.h  utils.h
lane_detect/launch/: lane_detect.launch  virtualcam.launch
lane_detect/src/: carcontrol.cpp  detectlane.cpp  detectobject.cpp  detectsign.cpp  laneline.cpp  main.cpp  planning.cpp  utils.cpp
lanenet/: CMakeLists.txt  README.md  package.xml
lanenet/launch/: dira.launch
lanenet/model/: README.md
lanenet/scripts/: lanenet_node.py
lanenet/scripts/lanenet_model/: lanenet_postprocess.py
obstacle_detector/: CMakeLists.txt  package.xml
obstacle_detector/cfg/: LidarDetector.cfg  PclDetector.cfg
obstacle_detector/include/obstacle_detector/: LidarDetector.hpp  PclDetector.hpp
obstacle_detector/include/utilities/: circle.h  figure_fitting.h  math_utilities.h  point.h  point_set.h  segment.h
obstacle_detector/launch/: test_lidar.launch  test_pcl.launch
obstacle_detector/src/: LidarDetector.cpp  PclDetector.cpp
obstacle_detector/src/node/: LidarDetectorNode.cpp  PclDetectorNode.cpp
planning/: CMakeLists.txt  package.xml
planning/cfg/: Planning.cfg
planning/include/planning/: interpolate_lane.h  planning.h
planning/src/: planning_node.cpp
planning/src/planning/: planning.cpp
sign_detect/: CMakeLists.txt  package.xml
sign_detect/data/: parameters.yaml  signs.txt
sign_detect/include/: argparse.hpp
sign_detect/include/sign_detect/: yolo_onnx_trt.hpp
sign_detect/include/yolov4/: yolov4_tiny.hpp
sign_detect/launch/: visualize.launch
sign_detect/src/: CMakeLists.txt  logger.cpp  yolo_onnx_trt.cpp  yolov4_tiny.cpp
(+123 files in other folders)
