<?xml version="1.0"?>
<package format="2">
  <name>obstacle_detector</name>
  <version>0.0.0</version>
  <description>The obstacle_detector package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ky@todo.todo">ky</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cds_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>cds_msgs</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>cds_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
