<?xml version="1.0"?>
<package format="2">
  <name>lanenet</name>
  <version>0.1.0</version>
  <description>The lanenet package</description>
  <maintainer email="team220@todo.todo">team220</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>common</build_depend> -->
  <depend>CUDAToolkit</depend>
  <depend>OpenCV</depend>
  <depend>TensorRT</depend>
  <depend>cv_bridge</depend>
  <depend>common</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
