<?xml version="1.0"?>
<package format="2">
  <name>obstacle_detect</name>
  <version>0.1.0</version>
  <description>The obstacle_detect package</description>
  <maintainer email="team220@todo.todo">team220</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>OpenCV</depend>
  <depend>Qt5</depend>

  <depend>cds_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>
  <exec_depend>rplidar_ros</exec_depend>

  <export>
    <!-- <nodelet plugin="${prefix}/nodelet_plugins.xml" /> -->
    <rviz plugin="${prefix}/rviz_plugins.xml"/>
  </export>
</package>
