<?xml version="1.0"?>
<package format="2">
  <name>gear_control</name>
  <version>1.0.0</version>
  <description>The gear_control package</description>
  <maintainer email="18127001@student.hcmus.edu.vn"></maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
