<?xml version="1.0"?>
<package format="2">
  <name>gpio_control</name>
  <version>2.0.6</version>
  <description>The gpio_control package</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
