<package format="2">
  <name>lcd_ros</name>
  <version>0.0.0</version>
  <description>lcd_ros</description>
  <maintainer email="hieupm5@fpt.com.vn">hieupm5</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msg</depend>
</package>
