<?xml version="1.0"?>
<package format="2">
  <name>rplidar_ros</name>
  <version>1.10.0</version>
  <description>The rplidar ros package, support rplidar A2/A1 and A3/S1</description>
  <maintainer email="ros@slamtec.com">Slamtec ROS Maintainer</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rosconsole</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

</package>
